# DearmeChatGPT

./: CITATION.cff  ChuanhuChatbot.py  app.py  gradio_proxy.py  pyproject.toml
assets/: custom.css  custom.js
modules/: chat_func.py  config.py  llama_func.py  presets.py  utils.py
templates/: Dario-Prompts.json  gradio.html  login.html  register.html
