[tool.poetry]
name = "dearmechatgpt"
version = "0.1.0"
description = ""
authors = ["Dario Zhang <zdclink@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flask-cors = "^3.0.10"
flask-httpauth = "^4.7.0"
werkzeug = "^2.2.3"
pymongo = "^4.3.3"
gradio = "^3.23.0"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.3"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
